--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
         body {
             background: var(--black);
+            background-image: radial-gradient(circle at 1px 1px, rgba(255,255,255,0.05) 1px, transparent 0);
+            background-size: 20px 20px;
             color: var(--white);
             display: flex;
             min-height: 100vh;
